source/teacher/.dart_tool/build/generated/angular_test/lib/src/errors/generic_type_missing.template.dart
// **************************************************************************
// Generator: AngularDart Compiler
// **************************************************************************

import 'generic_type_missing.dart';
export 'generic_type_missing.dart';

// No initReflector() linking required.
void initReflector() {}
